# SOCS

./: .gitignore  README.md  elevation_world.py  empty_world.py  environment.py  example_world.py  gui.py  mplib.py  util.py
predator_prey/: predator_prey.py  predator_prey_selvin.py
predator_prey/data50/: extinction_time.tsv  plot.py  pred0s.tsv  water_levels.tsv
sebastian/: combine.py  deathsize.py  dieout.py  expo.py  extinction.py  extinction3.py  line_reference.py  map.py  mapplot.py  mapplot2.py  measure1.py  mig0.py  mig100.py  model.py  model2.py  model3.py  prob.py  profile.pyprof  test.py
sebastian/cpp/: CMakeLists.txt  alive.py  data.txt  data2.txt  data3.txt  data4.txt  mig.txt  model.cpp  plot.py  pp.py
